Add backroung img

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="window">
-    <div class="title-bar">KICHZZ WAITLIST</div>
-    <div class="content">
-      <p>DOŁĄCZ DO LISTY OCZEKUJĄCYCH, ABY UZYSKAĆ<br>DOSTĘP DO DROPÓW I MAGAZYNU</p>
-      <form>
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email">
-        <button type="submit">Yes</button>
-      </form>
+  <div class="overlay">
+    <div class="window">
+      <div class="title-bar">KICHZZ WAITLIST</div>
+      <div class="content">
+        <p>DOŁĄCZ DO LISTY OCZEKUJĄCYCH, ABY UZYSKAĆ<br>DOSTĘP DO DROPÓW I MAGAZYNU</p>
+        <form>
+          <label for="email">E-mail:</label>
+          <input type="email" id="email" name="email">
+          <button type="submit">Yes</button>
+        </form>
+      </div>
     </div>
   </div>
 </body>
