dodanie zamykania po zapisaniu maila

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
         </div>
     </div>
     <script src="script.js"></script>
+	<div id="retro-shutdown-screen">
+    <div class="retro-text">Please wait while your computer shuts down...</div>
+</div>
 </body>
 </html>
