dodanie paska ladowania html/css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
     </div>
     <script src="script.js"></script>
 	<div id="retro-shutdown-screen">
-    <div class="retro-text">Please wait while your computer shuts down...</div>
+    	 <div class="retro-box">
+        <img class="retro-gif" src="logo.gif" alt="Loading...">
+
+        <div class="retro-text">
+            Please wait while your computer shuts down...
+        </div>
+
+        <div class="retro-loader">
+            <div class="retro-loader-fill"></div>
+        </div>
+    </div>
+	<div class="retro-text">Please wait while your computer shuts down...</div>
 </div>
 </body>
 </html>
