dodanie boot loadera

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="boot-screen">
+    <div id="screen"></div><span class="cursor"></span>
+</div>
+
+<div id="main-content" style="display:none;">
+    <!-- tu wklej zawartość swojej strony / aplikacji -->
+    <h1>Witaj w mojej aplikacji!</h1>
+</div>
+
     <div class="desktop">
         <div class="window">
             <div class="window-header">
