--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 </div>
 
 <div id="main-content" style="display:none;">
-    <!-- tu wklej zawartość swojej strony / aplikacji -->
-    <h1>Witaj w mojej aplikacji!</h1>
 </div>
 
     <div class="desktop">
@@ -25,13 +23,13 @@
             </div>
             <div class="window-content">
                 <div class="subtitle">
-                    Warning! Get Your Sneaker Magazine <br>
-                    Clothes / Drop / Article
+                    Warning! Get Your KICKZ'Z Magazine <br>
+                    Culture / Sneakers / Fashion
                 </div>
                 <div class="form-container">
                     <label for="email">E-mail:</label>
                     <input type="email" id="email" name="email" placeholder="">
-                    <button id="yes-button" class="yes-button">Yes</button>
+                    <button id="yes-button" class="yes-button">Send</button>
                 </div>
             </div>
         </div>
