--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         </div>
     </div>
 </div>
+<div id="retro-shutdown-screen-frame" class="show">
+    <div class="crt">
+        <div class="loading-window">
+            <h2>System Loading...</h2>
+            <div class="progress">
+                <div class="fill" id="fill"></div>
+            </div>
+            <p class="loading-text">Please wait...</p>
+        </div>
+    </div>
+</div> 
+     
 <div id="overlay"></div>
 </body>
 </html>
