dodanie ikonki komputera

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </div>
 
     <div class="desktop">
+       <div class="icons-box"> <img class="retro-gif" src="comp.png" alt="icon">  </div>
         <div class="window">
+             
             <div class="window-header">
                 <span class="window-title">KICKZ'Z WAITLIST</span>
                 <button class="close-button">×</button>
