--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
     <div id="boot-screen">
     <div id="screen"></div><span class="cursor"></span>
 </div>
@@ -16,13 +17,18 @@
 </div>
 
     <div class="desktop">
-       <div class="icons-box"> <img class="retro-gif" src="comp.png" alt="icon">  </div>
+       <div class="icons-box">
+         <img class="ikona-komputera" src="comp.png" alt="icon"> 
+         <div class="moj-komputer">Moj komputer</div>
+         </div>
+
+
         <div class="window">
              
             <div class="window-header">
                 <span class="window-title">KICKZ'Z WAITLIST</span>
                 <button class="close-button">×</button>
-            </div>
+            </div>  
             <div class="window-content">
                 <div class="subtitle">
                     Warning! Get Your KICKZ'Z Magazine <br>
